vlib/v/checker/tests/or_block_non_option_err.vv
name := 100

_ = name or { 100 }
